--- a/VampGen/package.json
+++ b/VampGen/package.json
@@ -4,7 +4,11 @@
     "gulp": "^3.9.1"
   },
   "dependencies": {
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
+    "bootstrap-sass": "^3.0.0",
     "laravel-elixir": "^5.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
   }
 }
